--- a/index.html
+++ b/index.html
@@ -1,12 +1,52 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" type="text/stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.min.css" />
- <link rel="stylesheet" type="text/stylesheet" href="global.css" />
-    <title></title>
-  </head>
-  <body>
 
-  </body>
+<head>
+    <meta charset="utf-8">
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.min.css" />
+    <link rel="stylesheet" type="text/stylesheet" href="global.css" />
+
+    <title>Best movies!!</title>
+</head>
+
+<body>
+    <h1 class="text-center">Top 5 picks for best and worst movies</h1>
+<!--
+    <div>
+    <h1>Best Movies</h1>
+    <ul id="movie_list">
+
+    </ul>
+  </div>
+
+  </div> -->
+
+  <!-- Table -->
+  <table class="table table-bordered" id="movie_list">
+    <th>Title</th>
+    <th>Director</th>
+    <th>Year</th>
+    <th>Actors</th>
+    <th>IMDB Rating</th>
+    <th>Meta Rating</th>
+  </table>
+  </div>
+
+
+
+
+    <!-- Scripts go here. -->
+    <script type="text/javascript" src="https://cdn.polyfill.io/v2/polyfill.min.js?features=fetch"></script>
+    <script type="text/javascript" src="movie.js"></script>
+
+</body>
+
 </html>
