Sorted movies by imdb star rating

--- a/index.html
+++ b/index.html
@@ -18,16 +18,10 @@
 </head>
 
 <body>
-    <h1 class="text-center">Top 5 picks for best and worst movies</h1>
-<!--
-    <div>
-    <h1>Best Movies</h1>
-    <ul id="movie_list">
+  <div class="jumbotron">
+  <h1 class="text-center">Top 5 picks for best and worst movies</h1>
 
-    </ul>
-  </div>
-
-  </div> -->
+</div>
 
   <!-- Table -->
   <table class="table table-bordered" id="movie_list">
