Added another table for imdb rating

--- a/index.html
+++ b/index.html
@@ -33,6 +33,19 @@
     <th>Meta Rating</th>
   </table>
   </div>
+  </div>
+
+    <!-- Table -->
+    <h1>Sorted by IMDB Rating</h1>
+    <table class="table table-bordered" id="movie_rating">
+      <th>Title</th>
+      <th>Director</th>
+      <th>Year</th>
+      <th>Actors</th>
+      <th>IMDB Rating</th>
+      <th>Meta Rating</th>
+    </table>
+    </div>
 
 
 
