Added worst movies and sorted by star rating

--- a/index.html
+++ b/index.html
@@ -18,32 +18,56 @@
 </head>
 
 <body>
-  <div class="jumbotron">
-  <h1 class="text-center">Top 5 picks for best and worst movies</h1>
+    <div class="jumbotron">
+        <h1 class="text-center">Top 5 picks for best and worst movies</h1>
 
-</div>
-
-  <!-- Table -->
-  <table class="table table-bordered" id="movie_list">
-    <th>Title</th>
-    <th>Director</th>
-    <th>Year</th>
-    <th>Actors</th>
-    <th>IMDB Rating</th>
-    <th>Meta Rating</th>
-  </table>
-  </div>
-  </div>
+    </div>
+    <h1> Best to worst movies ever made!</h1>
+    <!-- Table -->
+    <table class="table table-bordered" id="all">
+        <th>Title</th>
+        <th>Director</th>
+        <th>Year</th>
+        <th>Actors</th>
+        <th>IMDB Rating</th>
+        <th>Meta Rating</th>
+    </table>
+    </div>
+    </div>
+    </div>
+    <h1>By title</h1>
+    <!-- Table -->
+    <table class="table table-bordered" id="movie_list">
+        <th>Title</th>
+        <th>Director</th>
+        <th>Year</th>
+        <th>Actors</th>
+        <th>IMDB Rating</th>
+        <th>Meta Rating</th>
+    </table>
+    </div>
+    </div>
 
     <!-- Table -->
-    <h1>Sorted by IMDB Rating</h1>
+    <h1>By IMDB Rating</h1>
     <table class="table table-bordered" id="movie_rating">
-      <th>Title</th>
-      <th>Director</th>
-      <th>Year</th>
-      <th>Actors</th>
-      <th>IMDB Rating</th>
-      <th>Meta Rating</th>
+        <th>Title</th>
+        <th>Director</th>
+        <th>Year</th>
+        <th>Actors</th>
+        <th>IMDB Rating</th>
+        <th>Meta Rating</th>
+    </table>
+    </div>
+
+    <h1>Worst Movies Ever</h1>
+    <table class="table table-bordered" id="worst_list">
+        <th>Title</th>
+        <th>Director</th>
+        <th>Year</th>
+        <th>Actors</th>
+        <th>IMDB Rating</th>
+        <th>Meta Rating</th>
     </table>
     </div>
 
